# rinha-de-backend-2024-q1

./: Cargo.toml  LICENSE
.cargo/: config.toml
src/: main.rs
