[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = {version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
time = { version = "0.3.25", features = ["macros", "serde", "formatting", "parsing"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v7", "serde"] }
